[package]
name = "parst"
version = "0.1.11"
edition = "2021"
description = "declarative parsing"
license = "MIT OR Apache-2.0"

[dependencies]
thiserror = "1.0.30"
parst_derive = { version = "0.1.11", path = "../parst_derive" , optional = true }

[features]
default = ["derive", "endian", "extra"]
derive = ["parst_derive"]
endian = []
extra = []