[package]
name = "parst"
version = "0.2.0"
edition = "2021"
description = "declarative parsing"
license = "MIT OR Apache-2.0"

[dependencies]
parst_derive = { version = "0.2.0", path = "../parst_derive", optional = true }
thiserror = "1.0.61"

[features]
default = ["derive", "endian"]
derive = ["parst_derive"]
endian = []
